# telegram-watchdog

./: .gitignore  Cargo.toml  Dockerfile  README.md  test.http
src/: mailer.rs  mailrelay.rs  main.rs  routes.rs  utils.rs
